Adding contents for the 'Main' section.

--- a/index.html
+++ b/index.html
@@ -4,8 +4,139 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Open+Sans:wght@400;500;700&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="./style.css" />
     <title>Semantic Elements</title>
   </head>
-  <body></body>
+  <body>
+    <main>
+      <!-- CONTAINER FOR CENTERING CONTENTS -->
+      <div class="container">
+        <h1>HTML Semantic Elements Cheatsheet</h1>
+        <p class="description">
+          A cheatsheet of the most common HTML semantic tags used along with the
+          description.
+        </p>
+
+        <!-- TABLE -->
+        <table>
+          <thead>
+            <tr>
+              <th>Tag Name</th>
+              <th>Tag</th>
+              <th>Description</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td>Article</td>
+              <td>&lt;article&gt;</td>
+              <td>
+                <p>
+                  Represents a self-container composition in a document, page,
+                  application, or site, which is intended to be independently
+                  distributable or reusable.
+                </p>
+              </td>
+            </tr>
+            <tr>
+              <td>Aside</td>
+              <td>&lt;aside&gt;</td>
+              <td>
+                <p>
+                  Represents a porttion of a document whose content is only
+                  indirectly related to the document's main content.
+                </p>
+              </td>
+            </tr>
+            <tr>
+              <td>Figcaption</td>
+              <td>&lt;figcaption&gt;</td>
+              <td>
+                <p>
+                  Represents a caption or legend describing the rest of the
+                  contents of its parent &lt;figure&gt; element.
+                </p>
+              </td>
+            </tr>
+            <tr>
+              <td>Figure</td>
+              <td>&lt;figure&gt;</td>
+              <td>
+                <p>
+                  Represents self-contained content, potentially with an
+                  optional caption, which is specified using the
+                  &lt;figcaption&gt; element. The figure, its caption, and its
+                  contents are referenced as a single unit.
+                </p>
+              </td>
+            </tr>
+            <tr>
+              <td>Footer</td>
+              <td>&lt;footer&gt;</td>
+              <td>
+                <p>
+                  Represents a footer for its nearest ancestor sectioning
+                  content for sectioning root element. A &lt;footer&gt;
+                  typically contains information about the author of the
+                  section, copyright data or links to related documents.
+                </p>
+              </td>
+            </tr>
+            <tr>
+              <td>Header</td>
+              <td>&lt;header&gt;</td>
+              <td>
+                <p>
+                  Represents introductory content, typically a group of
+                  introductory or navigational aids. It may contain some heading
+                  elements but also a logo, a search form, an author name, and
+                  other elements.
+                </p>
+              </td>
+            </tr>
+            <tr>
+              <td>Main</td>
+              <td>&lt;main&gt;</td>
+              <td>
+                <p>
+                  Represents the dominant content of the &lt;body&gt; of a
+                  document. The main content area consists of content that is
+                  directly related to or expands upon the central topic of a
+                  document, or the central functionality of an application.
+                </p>
+              </td>
+            </tr>
+            <tr>
+              <td>Nav</td>
+              <td>&lt;nav&gt;</td>
+              <td>
+                <p>
+                  Represents a section of a page whose purpose is to provide
+                  navigation links, either within the current document or to
+                  other documents. Common examples of navigation sections are
+                  menus, tables of contents, and indexes.
+                </p>
+              </td>
+            </tr>
+            <tr>
+              <td>Section</td>
+              <td>&lt;section&gt;</td>
+              <td>
+                <p>
+                  Represents a generic standalone section of a document, which
+                  doesn't have a more specific semantic element to represent it.
+                  Sections should always have a heading, with very few
+                  exceptions.
+                </p>
+              </td>
+            </tr>
+          </tbody>
+        </table>
+      </div>
+    </main>
+  </body>
 </html>
