Changing positioning of the container and the main elements.

--- a/index.html
+++ b/index.html
@@ -12,9 +12,10 @@
     <title>Semantic Elements</title>
   </head>
   <body>
-    <main>
-      <!-- CONTAINER FOR CENTERING CONTENTS -->
-      <div class="container">
+    <!-- CONTAINER FOR CENTERING CONTENTS -->
+    <div class="container">
+      <!-- MAIN -->
+      <main>
         <h1>HTML Semantic Elements Cheatsheet</h1>
         <p class="description">
           A cheatsheet of the most common HTML semantic tags used along with the
@@ -136,7 +137,7 @@
             </tr>
           </tbody>
         </table>
-      </div>
-    </main>
+      </main>
+    </div>
   </body>
 </html>
