Adding content for the Footer.

--- a/index.html
+++ b/index.html
@@ -138,6 +138,11 @@
           </tbody>
         </table>
       </main>
+
+      <!-- FOOTER -->
+      <footer>
+        <p class="copyright">Copyrights &copy; 2022</p>
+      </footer>
     </div>
   </body>
 </html>
