Adding description class to pargraph elements in the table.

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <!-- MAIN -->
       <main>
         <h1>HTML Semantic Elements Cheatsheet</h1>
-        <p class="description">
+        <p class="text-primary">
           A cheatsheet of the most common HTML semantic tags used along with the
           description.
         </p>
@@ -36,7 +36,7 @@
               <td>Article</td>
               <td>&lt;article&gt;</td>
               <td>
-                <p>
+                <p class="description">
                   Represents a self-container composition in a document, page,
                   application, or site, which is intended to be independently
                   distributable or reusable.
@@ -47,7 +47,7 @@
               <td>Aside</td>
               <td>&lt;aside&gt;</td>
               <td>
-                <p>
+                <p class="description">
                   Represents a porttion of a document whose content is only
                   indirectly related to the document's main content.
                 </p>
@@ -57,7 +57,7 @@
               <td>Figcaption</td>
               <td>&lt;figcaption&gt;</td>
               <td>
-                <p>
+                <p class="description">
                   Represents a caption or legend describing the rest of the
                   contents of its parent &lt;figure&gt; element.
                 </p>
@@ -67,7 +67,7 @@
               <td>Figure</td>
               <td>&lt;figure&gt;</td>
               <td>
-                <p>
+                <p class="description">
                   Represents self-contained content, potentially with an
                   optional caption, which is specified using the
                   &lt;figcaption&gt; element. The figure, its caption, and its
@@ -79,7 +79,7 @@
               <td>Footer</td>
               <td>&lt;footer&gt;</td>
               <td>
-                <p>
+                <p class="description">
                   Represents a footer for its nearest ancestor sectioning
                   content for sectioning root element. A &lt;footer&gt;
                   typically contains information about the author of the
@@ -91,7 +91,7 @@
               <td>Header</td>
               <td>&lt;header&gt;</td>
               <td>
-                <p>
+                <p class="description">
                   Represents introductory content, typically a group of
                   introductory or navigational aids. It may contain some heading
                   elements but also a logo, a search form, an author name, and
@@ -103,7 +103,7 @@
               <td>Main</td>
               <td>&lt;main&gt;</td>
               <td>
-                <p>
+                <p class="description">
                   Represents the dominant content of the &lt;body&gt; of a
                   document. The main content area consists of content that is
                   directly related to or expands upon the central topic of a
@@ -115,7 +115,7 @@
               <td>Nav</td>
               <td>&lt;nav&gt;</td>
               <td>
-                <p>
+                <p class="description">
                   Represents a section of a page whose purpose is to provide
                   navigation links, either within the current document or to
                   other documents. Common examples of navigation sections are
@@ -127,7 +127,7 @@
               <td>Section</td>
               <td>&lt;section&gt;</td>
               <td>
-                <p>
+                <p class="description">
                   Represents a generic standalone section of a document, which
                   doesn't have a more specific semantic element to represent it.
                   Sections should always have a heading, with very few
